# autofile

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: conf.py
docs/api/: autofile.md
docs/resources/: install.md
src/sphinxcontrib/autofile/: __init__.py  directive.py
src/sphinxcontrib/autofile/assets/jinja2/: template.md.j2  template.rst.j2
